# PlayCat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.md
models/: getModel.sh
src/: CatFinder.cpp  CatFinder.h  main.cpp
